--- a/案例/02-小程序初体验/01-project/app.wxss
+++ b/案例/02-小程序初体验/01-project/app.wxss
@@ -1,10 +1,10 @@
-/**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+.test-rpx50 {
+  background-color: yellowgreen;
+}
+.parent {
+  background-color: yellow;
+  padding: 20px;
+}
+.test-hover-class {
+  background-color: tomato;
+}
