组件的插槽

--- a/案例/04-小程序进阶概念/02-project/components/list/list.wxml
+++ b/案例/04-小程序进阶概念/02-project/components/list/list.wxml
@@ -1,3 +1,4 @@
+<slot name="header"></slot>
 <scroll-view>
   <view 
     wx:for="{{ listData }}" 
@@ -6,4 +7,5 @@
     {{ item.title }}
   </view>
 </scroll-view>
+<slot name="footer"></slot>
 
