--- a/案例/04-小程序进阶概念/02-project/pages/index/index.wxml
+++ b/案例/04-小程序进阶概念/02-project/pages/index/index.wxml
@@ -1,7 +1,10 @@
 <!--index.wxml-->
 <view>
   <tabs bind:change="onTabChange"></tabs>
-  <list tabId="{{tabSelectId}}"></list>
+  <list tabId="{{tabSelectId}}">
+    <view slot="header" class="list-slot">我是列表的头部</view>
+    <view slot="footer" class="list-slot">我是列表的底部</view>
+  </list>
 </view>
 
 
