--- a/project/imooc-blog/uni_modules/uni-scss/variables.scss
+++ b/project/imooc-blog/uni_modules/uni-scss/variables.scss
@@ -46,7 +46,7 @@ $uni-white: #ffffff;
 $uni-transparent: rgba($color: #000000, $alpha: 0);
 
 // 背景色
-$uni-bg-color: #f7f7f7;
+$uni-bg-color: #fff;
 
 /* 水平间距 */
 $uni-spacing-sm: 8px;
