--- a/project/imooc-blog/styles/global.scss
+++ b/project/imooc-blog/styles/global.scss
@@ -14,6 +14,16 @@
   word-break: break-all;
 }
 
+.line-clamp {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  word-break: break-all;
+}
+
 // 卡片视图
 .card {
   border: 1px solid #f9f9f9;
