--- a/project/imooc-blog/styles/article-detail.scss
+++ b/project/imooc-blog/styles/article-detail.scss
@@ -5,8 +5,8 @@ body {
   font-size: 16px;
 }
 .markdown_views {
-  font-family: -apple-system, SF UI Text, Arial, PingFang SC, Hiragino Sans GB, Microsoft YaHei,
-    WenQuanYi Micro Hei, sans-serif, SimHei, SimSun;
+  font-family: -apple-system, SF UI Text, Arial, PingFang SC, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei,
+    sans-serif, SimHei, SimSun;
   font-size: 16px;
   width: 710rpx;
   overflow-x: hidden;
@@ -252,16 +252,16 @@ html .markdown_views .h6-cls {
   margin-bottom: 0.48rem;
   font-size: 0.28rem !important;
 }
-.markdown_views .sequence-diagram [fill='#000'],
-.markdown_views .flow-chart [fill='#000'],
-.markdown_views .sequence-diagram [fill='#000000'],
-.markdown_views .flow-chart [fill='#000000'],
-.markdown_views .sequence-diagram [fill='black'],
-.markdown_views .flow-chart [fill='black'] {
+.markdown_views .sequence-diagram [fill="#000"],
+.markdown_views .flow-chart [fill="#000"],
+.markdown_views .sequence-diagram [fill="#000000"],
+.markdown_views .flow-chart [fill="#000000"],
+.markdown_views .sequence-diagram [fill="black"],
+.markdown_views .flow-chart [fill="black"] {
   fill: #4f4f4f;
 }
-.markdown_views .sequence-diagram [stroke='#000000'],
-.markdown_views .flow-chart [stroke='#000000'] {
+.markdown_views .sequence-diagram [stroke="#000000"],
+.markdown_views .flow-chart [stroke="#000000"] {
   stroke: #4f4f4f;
 }
 .markdown_views .MathJax_SVG_Display {
@@ -633,3 +633,7 @@ html body.night-body .img-cls.mathcode {
 .mermaid span.edgeLabel {
   font-size: inherit !important;
 }
+
+/* PrismJS 1.25.0
+https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
+code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shadow:0 1px #fff;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{text-shadow:none;background:#b3d4fc}code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{text-shadow:none;background:#b3d4fc}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto}:not(pre)>code[class*=language-],pre[class*=language-]{background:#f5f2f0}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#708090}.token.punctuation{color:#999}.token.namespace{opacity:.7}.token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;}.token.atrule,.token.attr-value,.token.keyword{color:#07a}.token.class-name,.token.function{color:#dd4a68}.token.important,.token.regex,.token.variable{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
